--- a/coffee-app/styles/globals.css
+++ b/coffee-app/styles/globals.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* background: url("/static/background.png"); */
+  /* background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #373b64;
+  height: 100%; */
 }
 
 a {
@@ -21,6 +27,12 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(
+      0deg,
+      rgba(2, 0, 36, 1) 30%,
+      rgba(13, 13, 152, 1) 84%,
+      rgba(10, 44, 72, 1) 100%
+    );
   }
 }
