--- a/coffee-app/styles/globals.css
+++ b/coffee-app/styles/globals.css
@@ -19,6 +19,9 @@ body {
     rgba(67, 56, 202, 1) 95%,
     rgba(79, 70, 229, 1) 100%
   );
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
 }
 
 a {
@@ -50,5 +53,8 @@ a {
       rgba(67, 56, 202, 1) 95%,
       rgba(79, 70, 229, 1) 100%
     );
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
   }
 }
