--- a/coffee-app/styles/globals.css
+++ b/coffee-app/styles/globals.css
@@ -2,8 +2,32 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  font-family: IBMPlexSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+  @font-face {
+    font-family: "IBMPlexSans";
+    font-style: normal;
+    font-weight: 500;
+    src: url(/fonts/IBMPlexSans-Regular.ttf) format("truetype");
+  }
+
+  @font-face {
+    font-family: "IBMPlexSans";
+    font-style: normal;
+    font-weight: 600;
+    src: url(/fonts/IBMPlexSans-SemiBold.ttf) format("truetype");
+  }
+
+  @font-face {
+    font-family: "IBMPlexSans";
+    font-style: normal;
+    font-weight: 700;
+    src: url(/fonts/IBMPlexSans-Bold.ttf) format("truetype");
+  }
+
   /* background: url("/static/background.png"); */
   /* background-position: 50%;
   background-repeat: no-repeat;
