--- a/coffee-app/styles/globals.css
+++ b/coffee-app/styles/globals.css
@@ -52,6 +52,21 @@ a {
   box-sizing: border-box;
 }
 
+/* glass-morphism */
+.glass {
+  background: rgba(67, 56, 202, 0.2);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(14.5px);
+  -webkit-backdrop-filter: blur(14.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(79, 70, 229, 0.18);
+}
+
+.glass:hover {
+  background: rgb(167, 167, 244, 0.5);
+  border: 1px solid #fff;
+}
+
 :root {
   --text-purple: rgba(67, 56, 202, 1);
   --text-purple-dark: rgba(79, 70, 229, 1);
