--- a/coffee-app/styles/Home.module.css
+++ b/coffee-app/styles/Home.module.css
@@ -33,6 +33,10 @@
   justify-content: center;
 }
 
+.sectionWrapper {
+  margin-top: 5rem;
+}
+
 @media (min-width: 640px) {
   .cardLayout {
     grid-template-columns: repeat(2, minmax(0, 1fr));
